--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,10 +1,12 @@
 <p-toolbar>
-  <!--test-->
-    <div class="p-toolbar-group-left">
-    <p-menubar [model]="items"></p-menubar>
+  <div class="p-toolbar-group-left">
+    <p-menubar [model]="items" [multiple]="false">
+      < <ng-template pTemplate="start">
+        <label>CRM</label>
+        </ng-template>
+    </p-menubar>
   </div>
   <div class="p-toolbar-group-right">
-    <!-- 右側按鈕 -->
+<!-- 右側按鈕 -->
   </div>
 </p-toolbar>
-
