--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,12 +1,8 @@
 <p-toolbar>
   <div class="p-toolbar-group-left">
-    <p-menubar [model]="items" [multiple]="false">
-      < <ng-template pTemplate="start">
-        <label>CRM</label>
-        </ng-template>
-    </p-menubar>
+    <p-menubar [model]="items"></p-menubar>
   </div>
   <div class="p-toolbar-group-right">
-<!-- 右側按鈕 -->
+    <!-- 右側按鈕 -->
   </div>
 </p-toolbar>
