--- a/src/app/views/components/toolbar/toolbar.component.html
+++ b/src/app/views/components/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <div class="p-toolbar-group-left">
   <p-menubar [model]="items">
-    < <ng-template pTemplate="start">
+    <ng-template pTemplate="start">
       <label [routerLink]="['/main/dashboard']">CRM</label>
-      </ng-template>
+    </ng-template>
   </p-menubar>
 </div>
 <div class="p-toolbar-group-right">
