--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,12 @@ p-card {
   }
 }
 
+p-button {
+  border-radius: 6px;
+  //框框跟label之間的間距
+  margin-right: 5px;
+}
+
 p-checkbox {
   //checkbox元件之間的間距
   margin-left: 10px;
@@ -46,8 +52,8 @@ p-radioButton {
 }
 
 label {
-  margin-left: 15px;
-  margin-right: 15px
+  margin-left: 10px;
+  margin-right: 10px
 }
 
 input {
