--- a/src/app/views/features/event/event.component.html
+++ b/src/app/views/features/event/event.component.html
@@ -1,10 +1,38 @@
 <p-card>
   <full-calendar [options]="options" (click)="showDialog()"></full-calendar>
 </p-card>
-<p-dialog header="Header" [(visible)]="visible" [style]="{width: '50vw'}">
-  <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
-</p-dialog>
+<p-dialog header="新增事件" [(visible)]="visible" [style]="{ width: '50vw' }">
+  <div class="container row">
+    <div class="col-6">
+      <label>主題</label>
+      <input type="text" pInputText />
+    </div>
+    <div class="col-6">
+      <label>指派對象</label>
+      <p-dropdown [options]="employee_name" placeholder="搜尋人員" [editable]="true" optionLabel="name"></p-dropdown>
+    </div>
+    <div class="col-6">
+      <label>位置</label>
+      <input type="text" pInputText />
+    </div>
+    <div class="col-6">
+      <label>全天事件</label>
+      <div class="col-12">
+        <p-checkbox id="all-day-event" value="yes"></p-checkbox>
+      </div>
+    </div>
+    <div class="col-6">
+      <label>開始</label>
+      <p-calendar [showTime]="true" [appendTo]="'body'" [showSeconds]="true" dateFormat="yy-mm-dd" [showButtonBar]="true"></p-calendar>
+    </div>
+    <div class="col-6">
+      <label>結束</label>
+      <p-calendar [showTime]="true" [appendTo]="'body'" [showSeconds]="true" dateFormat="yy-mm-dd" [showButtonBar]="true"></p-calendar>
+    </div>
+    <div class="col-12 d-flex justify-content-end mt-2">
+      <p-button (click)="visible = false" label="取消"></p-button>
+      <p-button (click)="visible = false" label="新增"></p-button>
+    </div>
 
+  </div>
+</p-dialog>
