--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,6 +29,22 @@ p-card {
   .p-calendar {
     width: 100%;
   }
+
+  .p-dialog {
+    width: 40%;
+    height: 330px;
+    border-radius: 10px;
+
+    .p-dialog-header {
+      border-top-right-radius: 10px;
+      border-top-left-radius: 10px;
+    }
+
+    .p-dialog-content:last-of-type {
+      border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+  }
 }
 
 p-checkbox {
