--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,8 +31,8 @@ p-card {
   }
 
   .p-dialog {
-    width: 40%;
-    height: 330px;
+    width: 50%;
+    height: 50%;
     border-radius: 10px;
 
     .p-dialog-header {
@@ -46,8 +46,6 @@ p-card {
     }
   }
 }
-
-
 
 p-checkbox {
   //checkbox元件之間的間距
