--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -21,7 +21,7 @@
           <tr>
             <td>{{ lead.name }}</td>
             <td>{{ lead.stage }}</td>
-            <td>{{ lead.account }}</td>
+            <td>{{ lead.account_name }}</td>
             <td>{{ lead.owner }}</td>
             <td><p-button (click)="showDialog('edit',lead)" icon="pi pi-pencil"
                 styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button></td>
@@ -50,13 +50,19 @@
       <div class="col-6 mt-3">
         <div class="field">
           <label>公司</label>
-          <input pInputText formControlName="account">
+          <input pInputText formControlName="account_name">
         </div>
       </div>
       <div class="col-6 mt-3">
         <div class="field">
           <label>商機擁有者</label>
           <input pInputText formControlName="owner">
+        </div>
+      </div>
+      <div class="col-12 mt-4">
+        <div class="field">
+          <label>商機名稱</label>
+          <input pInputText formControlName="opportunity_name">
         </div>
       </div>
       <div class="d-flex justify-content-end mt-3">
