feat: Campaign verson1

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,7 @@ p-card {
 
   .p-dialog {
     width: 50%;
-    height: 50%;
+    //height: 50%;
     border-radius: 10px;
 
     .p-dialog-header {
