style: 下拉選單樣式

--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -44,7 +44,7 @@
         <div class="field">
           <label>商機狀態</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="stage" optionLabel="name" (onChange)="stageValue($event)"
-            formControlName="stage"></p-dropdown>
+            formControlName="stage" appendTo="body"></p-dropdown>
         </div>
       </div>
       <div class="col-6 mt-3">
