--- a/src/app/views/components/signup/signup.component.html
+++ b/src/app/views/components/signup/signup.component.html
@@ -1,12 +1,14 @@
-<div class="container">
-  <h3 class="mt-4">CRM系統</h3>
-  <p-divider></p-divider>
-  <div class="d-flex justify-content-center mt-5">
-    <p-card>
-      <h3>註冊</h3>
-      <p-divider></p-divider>
-      <div class="row">
-      </div>
-    </p-card>
+<div class="flex justify-content-center">
+  <div class="col-10">
+    <h1 class="mb-4">CRM系統</h1>
+    <p-divider></p-divider>
+    <div class="flex justify-content-center mt-5">
+      <p-card>
+        <h3>註冊</h3>
+        <p-divider></p-divider>
+        <div class="grid">
+        </div>
+      </p-card>
+    </div>
   </div>
 </div>
