--- a/src/app/views/components/login/login.component.html
+++ b/src/app/views/components/login/login.component.html
@@ -1,39 +1,42 @@
-<div class="container">
-  <h3 class="mt-4">CRM系統</h3>
-  <p-divider></p-divider>
-  <div class="d-flex justify-content-center mt-5">
-    <p-card>
-      <h3>登入</h3>
-      <p-divider></p-divider>
-      <div class="row">
-        <div class="col-12">
-          <div class="field">
-            <label>帳號</label>
-            <input pInputText>
+<div class="flex justify-content-center">
+  <div class="col-10">
+    <h1 class="mb-4">CRM系統</h1>
+    <p-divider></p-divider>
+    <div class="flex justify-content-center mt-5">
+      <p-card>
+        <h3>登入</h3>
+        <p-divider></p-divider>
+        <div class="grid">
+          <div class="col-12">
+            <div class="field">
+              <label>帳號</label>
+              <input pInputText>
+            </div>
           </div>
-        </div>
-        <div class="col-12 mt-2">
-          <label>密碼</label>
-          <p-password></p-password>
-        </div>
-        <div class="col-6">
-          <div class="d-flex justify-content-start mt-3">
-            <a href="">忘記密碼?</a>
+          <div class="col-12 mt-1">
+            <label>密碼</label>
+            <p-password></p-password>
           </div>
-        </div>
-        <div class="col-6">
-          <div class="d-flex justify-content-end align-items-center mt-3">
-            <p-button label="登入" routerLink="/main" ></p-button>
+          <div class="col-6">
+            <div class="flex justify-content-start mt-3">
+              <a href="">忘記密碼?</a>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="flex justify-content-end align-items-center mt-3">
+              <p-button label="登入" routerLink="/main"></p-button>
+            </div>
           </div>
         </div>
         <p-divider></p-divider>
-        <div class="d-flex justify-content-center">
-          <h5>未註冊帳戶?</h5>
+        <div class="flex justify-content-center">
+          <h4>未註冊帳戶?</h4>
         </div>
-        <div class="d-flex justify-content-center mt-1">
-          <p-button label="註冊" routerLink="/signup" styleClass="p-button-raised p-button-text p-button-secondary" icon="pi pi-arrow-right" iconPos="right"></p-button>
+        <div class="flex justify-content-center mt-1">
+          <p-button label="註冊" routerLink="/signup" styleClass="p-button-raised p-button-text p-button-secondary"
+            icon="pi pi-arrow-right" iconPos="right"></p-button>
         </div>
-      </div>
-    </p-card>
+      </p-card>
+    </div>
   </div>
 </div>
