--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -1,8 +1,8 @@
-<div class="container">
-  <div class="row mb-5">
+<div class="flex justify-content-center">
+  <div class="col-10">
     <p-card>
-      <h3>聯絡人</h3>
-      <div class="d-flex justify-content-end">
+      <h2>聯絡人</h2>
+      <div class="flex justify-content-end">
         <span class="p-buttonset">
           <p-button (click)="showDialog('add')" label="新增聯絡人" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
@@ -35,7 +35,7 @@
 </div>
 <form [formGroup]="contact_form">
   <p-dialog [(visible)]="edit" header={{dialogHeader}}>
-    <div class="row">
+    <div class="grid">
       <div class="col-6">
         <div class="field">
           <label>姓名</label>
@@ -48,28 +48,28 @@
           <input pInputText formControlName="account_name">
         </div>
       </div>
-      <div class="col-6 mt-3">
+      <div class="col-6">
         <div class="field">
           <label>電話</label>
           <input pInputText formControlName="phone">
         </div>
       </div>
-      <div class="col-6 mt-3">
+      <div class="col-6">
         <div class="field">
           <label>聯絡人擁有者</label>
           <input pInputText formControlName="contact_owner">
         </div>
       </div>
-      <div class="col-12 mt-3">
+      <div class="col-12">
         <div class="field">
           <label>電子郵件</label>
           <input pInputText formControlName="email">
         </div>
       </div>
-      <div class="d-flex justify-content-end mt-3">
-        <p-button label="儲存" styleClass="p-button-outlined p-button-info"></p-button>
-        <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ms-1"></p-button>
-      </div>
+    </div>
+    <div class="flex justify-content-end mt-3">
+      <p-button label="儲存" styleClass="p-button-outlined p-button-info"></p-button>
+      <p-button label="取消" (click)="edit=false" styleClass="p-button-secondary ml-1"></p-button>
     </div>
   </p-dialog>
 </form>
