fix: 商機更名->商機線索

--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -1,19 +1,19 @@
 <div class="flex justify-content-center">
   <div class="col-10">
     <p-card>
-      <h2>商機</h2>
+      <h2>商機線索</h2>
       <div class="flex justify-content-end">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" label="新增商機" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+          <p-button (click)="showDialog('add')" label="新增商機線索線索" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
       <p-table [value]="lead">
         <ng-template pTemplate="header">
           <tr>
             <th>姓名</th>
-            <th>商機狀態</th>
+            <th>商機線索狀態</th>
             <th>公司</th>
-            <th>商機擁有者</th>
+            <th>業務負責人</th>
             <th>編輯</th>
           </tr>
         </ng-template>
@@ -42,7 +42,7 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>商機狀態</label>
+          <label>商機線索狀態</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="stage" optionLabel="name"
             (onChange)="stageValue($event)" formControlName="stage" appendTo="body"></p-dropdown>
         </div>
@@ -55,13 +55,13 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>商機擁有者</label>
+          <label>業務負責人</label>
           <input pInputText formControlName="owner">
         </div>
       </div>
       <div class="col-12">
         <div class="field">
-          <label>商機名稱</label>
+          <label>商機線索名稱</label>
           <input pInputText formControlName="opportunity_name">
         </div>
       </div>
